checkbox (0.16.7) UNRELEASED; urgency=low

  * Incremented changelog

 -- Brendan Donegan <brendan.donegan@canonical.com>  Sat, 13 Jul 2013 11:43:11 +0100

checkbox (0.16.6) raring; urgency=low

  [ Brendan Donegan ]
  * plugins/launchpad_report.py - Don't include attachments which have a status
    of 'unsupported' (LP: #1196531)
  * checkbox/parsers/lshwjson.py, scripts/memory_compare - Create a parser for
    lshw and use this in the memory_compare script instead of dmidecode
    (LP: #1184661)
  * plugins/subunit_report.py - Prevent crash when job output contains 
    non-ASCII characters (LP: #1196838)
  * jobs/info.txt.in - Add lshw_attachment job with dependency on the lshw
    package, and also give dmidecode_attachment a dependency on dmidecode,
    this way we get the right attachments (LP: #1199245)

  [ Alberto Milone ]
  * checkbox-old/scripts/color_depth_info:
    - Be more strict in the regex so as to make sure that we catch the
      correct string.
    - Open the log using the 'rb' flag. This prevents python from throwing
      a UnicodeDecodeError.
  
  [ Jeff Lane ]
  * scripts/fwts_test: script now fails on aborted tests if desired. 
    jobs/power-management.txt.in: jobs that depend on fwts_wakealarm to pass or
    fail now fail on aborted test result. (LP: #1192684)

  [ Daniel Manrique ]
  * checkbox-old/scripts/gst_pipeline_test: Better debugging output, and
    script exits gracefully when the pipeline is unparsable or has a missing
    element.
  * checkbox-old/jobs/graphics.txt.in: Use videoconvert instead of
    ffmpegcolorspace, with a fallback if videoconvert is not found
    (LP: #1199259)
  * checkbox-old/jobs/input.txt.in: Add more details in pointing test names
    so they are easier to identify (LP: #1192541)

  [ Sylvain Pineau ]
  * checkbox-old/scripts/meminfo_resource, cpuinfo_resource: sort items for a
    deterministic output. Meant to be used with after_suspend jobs.