@@ -99,6 +99,8 @@ suspend/suspend-single-log-check
 suspend/audio_after_suspend_auto
 suspend/network_resume_time_auto
 suspend/wifi_resume_time_auto
+suspend/usb_storage_preinserted_after_suspend
+suspend/usb3_storage_preinserted_after_suspend
 suspend/record_playback_after_suspend_auto
 suspend/bluetooth_obex_send_after_suspend_auto
 suspend/bluetooth_obex_browse_after_suspend_auto
